force-app/main/default/objects/HM_Dashboard_Data_Source__c/HM_Dashboard_Data_Source__c.object-meta.xml
<CustomObject>
    <description>Data definition for dashboard components. Supports SOQL or Apex. One Component can have multiple Data Sources. Define data sources for a component to retrieve data using SOQL queries or Apex methods. Choose SOQL for direct queries or Apex for custom logic.</description>
    <label>Dashboard Data Source</label>
    <nameField>
        <label>Data Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboard Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>