force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_Active__c.field-meta.xml
<CustomField>
    <fullName>HM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Whether this data source is active. Uncheck to disable this data source. When inactive, components using it will not execute and will show no data. Useful for temporarily disabling a data source without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>