force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>HM_Apex_Class_Name__c</fullName>
    <inlineHelpText>Apex class name containing the data retrieval method. Enter the API name of the Apex class. The class must implement the Callable interface. Example: HM_DashboardController</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>