force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_Apex_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>HM_Apex_Method_Name__c</fullName>
    <inlineHelpText>Method name to call in the Apex class. Enter the method name that will be invoked. The method must be @AuraEnabled and return List&lt;Map&lt;String, Object&gt;&gt; or Map&lt;String, Object&gt;. Example: getKpiMetrics</inlineHelpText>
    <label>Apex Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>