force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_Dashboard_Component__c.field-meta.xml
<CustomField>
    <fullName>HM_Dashboard_Component__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the dashboard component this data source belongs to. One component can have multiple data sources.</inlineHelpText>
    <label>Dashboard Component</label>
    <referenceTo>HM_Dashboard_Component__c</referenceTo>
    <relationshipLabel>Data Sources</relationshipLabel>
    <relationshipName>Data_Sources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>