force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_Order__c.field-meta.xml
<CustomField>
    <fullName>HM_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Display order for processing multiple Data Sources. Lower numbers are processed first. Use this to control which Data Source is primary or the sequence in which multiple Data Sources are processed.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>