force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_Query_Config__c.field-meta.xml
<CustomField>
    <fullName>HM_Query_Config__c</fullName>
    <description>JSON configuration storing wizard state for reconstruction. Contains object, fields, WHERE conditions, and query settings.</description>
    <inlineHelpText>Internal field storing the Query Builder wizard configuration as JSON. Do not edit directly.</inlineHelpText>
    <label>Query Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>