force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_Return_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Return_Type__c</fullName>
    <inlineHelpText>Expected return type from this data source. Aggregate for scalar values/metrics, List for record lists</inlineHelpText>
    <label>Return Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Multi-Object</fullName>
                <isActive>false</isActive>
                <label>Multi-Object</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>