force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_Row_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>HM_Row_Icon_Name__c</fullName>
    <inlineHelpText>SLDS icon name for rows from this data source. Format: namespace:iconname (e.g., standard:account, utility:moneybag, custom:custom14). Leave blank for no icon.</inlineHelpText>
    <label>Row Icon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>