force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>HM_SOQL_Query__c</fullName>
    <inlineHelpText>SOQL query to retrieve data. Enter a valid SOQL query. Supports merge fields: {!UserId}, {!Today}, {!ThisMonth}. Example: SELECT Id, Name, Amount FROM Opportunity WHERE OwnerId = {!UserId} AND IsClosed = false</inlineHelpText>
    <label>SOQL Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>