force-app/main/default/objects/HM_Dashboard_Data_Source__c/fields/HM_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Type__c</fullName>
    <inlineHelpText>Data retrieval method. Choose SOQL for direct database queries or Apex for custom logic, aggregations, or external integrations.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>