force-app/main/default/objects/HM_Dashboard_Data_Source__c/validationRules/Apex_Required_When_Type_Apex.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Required_When_Type_Apex</fullName>
    <active>true</active>
    <description>When Type is Apex, both Apex Class Name and Apex Method Name are required.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(HM_Type__c, &apos;Apex&apos;),
    OR(
        ISBLANK(HM_Apex_Class_Name__c),
        ISBLANK(HM_Apex_Method_Name__c)
    )
)</errorConditionFormula>
    <errorDisplayField>HM_Type__c</errorDisplayField>
    <errorMessage>Apex Class Name and Apex Method Name are required when Type is Apex.</errorMessage>
</ValidationRule>