force-app/main/default/objects/HM_Dashboard_Data_Source__c/validationRules/SOQL_Required_When_Type_SOQL.validationRule-meta.xml
<ValidationRule>
    <fullName>SOQL_Required_When_Type_SOQL</fullName>
    <active>true</active>
    <description>When Type is SOQL, SOQL Query is required.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(HM_Type__c, &apos;SOQL&apos;),
    ISBLANK(HM_SOQL_Query__c)
)</errorConditionFormula>
    <errorDisplayField>HM_SOQL_Query__c</errorDisplayField>
    <errorMessage>SOQL Query is required when Type is SOQL.</errorMessage>
</ValidationRule>