force-app/main/default/objects/HM_Dashboard_Data_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HM_Active__c</columns>
    <columns>HM_Order__c</columns>
    <columns>HM_Return_Type__c</columns>
    <columns>HM_Dashboard_Component__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>